Add ffmpeg shared lib.

--- a/myplayer/build.gradle
+++ b/myplayer/build.gradle
@@ -8,12 +8,19 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
         externalNativeBuild {
             cmake {
                 cppFlags "-frtti -fexceptions"
+                abiFilters "armeabi", "x86"
             }
         }
 
+        sourceSets {
+            main {
+                jniLibs.srcDirs = ['src/main/jniLibs']
+            }
+        }
     }
 
     buildTypes {
