Play the audio by OpenSLES.

--- a/myplayer/CMakeLists.txt
+++ b/myplayer/CMakeLists.txt
@@ -73,6 +73,8 @@ target_link_libraries( # Specifies the target library.
                        swresample-2
                        swscale-4
 
+                       OpenSLES
+
                        # Links the target library to the log library
                        # included in the NDK.
                        log )
