--- a/myplayer/build.gradle
+++ b/myplayer/build.gradle
@@ -12,7 +12,7 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags "-frtti -fexceptions"
-                abiFilters "armeabi", "x86"
+                abiFilters "x86"
             }
         }
 
